# OmniSplat4D

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_pipeline.py
config/: default.yaml
config/hardware_profiles/: a100_80gb.yaml  rtx3060_12gb.yaml
docs/: ARCHITECTURE.md  CLAUDE_HANDOFF_INDEX.md  OPEN_QUESTIONS.md  OPERATIONS_LOGGING_STANDARD.md  ROADMAP.md
docs/research/: long_term_vision_corridorkey_integration.md  phase1_3DGS_static.md  phase2_4DGS_dynamic.md
docs/sessions/: 2026-04-01_initial-scaffold.md  2026-04-13_community-outreach-and-external-review.md
log/: 2026-04-14_run-log.md  INDEX.md  RUN_LOG_TEMPLATE.md
notes/: amd_ve_reference.md
scripts/: init_workspace.py
src/omnisplat4d/: __init__.py  __main__.py
src/omnisplat4d/composite/: __init__.py  renderer.py
src/omnisplat4d/core/: __init__.py  config.py  memory.py  types.py
src/omnisplat4d/export/: __init__.py  onnx_exporter.py  spz_writer.py  tiles_packager.py
src/omnisplat4d/ingest/: __init__.py  extractor.py  projector.py
src/omnisplat4d/segment/: __init__.py  detector.py  inverter.py  masker.py  tracker.py
src/omnisplat4d/sfm/: __init__.py  initializer.py  runner.py
src/omnisplat4d/train/: __init__.py  color_mlp.py  deformation.py  dynamic_trainer.py  pruner.py  static_trainer.py
tests/: test_initializer.py  test_projector.py  test_pruner.py  test_static_trainer.py
